--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <th><img width="30" class="float-end"
                                     src="https://static-exp1.licdn.com/sc/h/3loy7tajf3n0cho89wgg0fjre" alt="LinkedIn">
                             </th>
-                            <th><a
+                            <th><a target="_blank"
                                     href="https://www.linkedin.com/jobs/desenvolvedor-vagas/?currentJobId=3363525535&originalSubdomain=br">https://www.linkedin.com/jobs/desenvolvedor-vagas/?currentJobId=3363525535&originalSubdomain=br</a>
                             </th>
                         </tr>
@@ -72,27 +72,27 @@
                             <th><img width="30" class="float-end"
                                     src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/iaignmilodnsq6xolfjn"
                                     alt="LinkedIn"></th>
-                            <th><a href="https://www.geekhunter.com.br/vagas">https://www.geekhunter.com.br/vagas</a>
+                            <th><a target="_blank" href="https://www.geekhunter.com.br/vagas">https://www.geekhunter.com.br/vagas</a>
                             </th>
                         </tr>
                         <tr>
                             <th><img width="30" class="float-end"
                                     src="https://programathor.com.br/assets/favicon-cdbfd3b19fccd3b2bf72ce4f913d9b78b4fa175bc720201e6f2ab9dd7fff39cf.png"
                                     alt="LinkedIn"></th>
-                            <th><a href="https://programathor.com.br/jobs">https://programathor.com.br/jobs</a></th>
+                            <th><a target="_blank" href="https://programathor.com.br/jobs">https://programathor.com.br/jobs</a></th>
                         </tr>
                         <tr>
                             <th><img width="30" class="float-end"
                                     src="https://www.vagas.com.br/assets/mundos/favicon_p-5f1c6f4a212dd1d5dec626adc362c80d7ff269c4f33522f09e718b975d4c8b7d.ico"
                                     alt="LinkedIn"></th>
-                            <th><a
+                            <th><a target="_blank"
                                     href="https://www.vagas.com.br/vagas-de-programador">https://www.vagas.com.br/vagas-de-programador</a>
                             </th>
                         </tr>
                         <tr>
                             <th><img width="30" class="float-end" src="https://assets.catho.com.br/ico/favicon.ico"
                                     alt="LinkedIn"></th>
-                            <th><a
+                            <th><a target="_blank"
                                     href="https://www.catho.com.br/vagas/programador/">https://www.catho.com.br/vagas/programador/</a>
                             </th>
                         </tr>
