--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         gtag('config', 'G-E9VW91JC5M');
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5974964001800449"
+        crossorigin="anonymous"></script>
+
     <title>VAGAS PRA DEV</title>
     <meta name="description" content="Oportunidades para Desenvolvedores!">
     <meta name="keywords"
@@ -72,14 +75,16 @@
                             <th><img width="30" class="float-end"
                                     src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/iaignmilodnsq6xolfjn"
                                     alt="LinkedIn"></th>
-                            <th><a target="_blank" href="https://www.geekhunter.com.br/vagas">https://www.geekhunter.com.br/vagas</a>
+                            <th><a target="_blank"
+                                    href="https://www.geekhunter.com.br/vagas">https://www.geekhunter.com.br/vagas</a>
                             </th>
                         </tr>
                         <tr>
                             <th><img width="30" class="float-end"
                                     src="https://programathor.com.br/assets/favicon-cdbfd3b19fccd3b2bf72ce4f913d9b78b4fa175bc720201e6f2ab9dd7fff39cf.png"
                                     alt="LinkedIn"></th>
-                            <th><a target="_blank" href="https://programathor.com.br/jobs">https://programathor.com.br/jobs</a></th>
+                            <th><a target="_blank"
+                                    href="https://programathor.com.br/jobs">https://programathor.com.br/jobs</a></th>
                         </tr>
                         <tr>
                             <th><img width="30" class="float-end"
