--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                     src="https://static-exp1.licdn.com/sc/h/3loy7tajf3n0cho89wgg0fjre" alt="LinkedIn">
                             </th>
                             <th><a target="_blank"
-                                    href="https://www.linkedin.com/jobs/desenvolvedor-vagas/?currentJobId=3363525535&originalSubdomain=br">https://www.linkedin.com/jobs/desenvolvedor-vagas/?currentJobId=3363525535&originalSubdomain=br</a>
+                                    href="https://www.linkedin.com/jobs/desenvolvedor-vagas/?originalSubdomain=br">https://www.linkedin.com/jobs/desenvolvedor-vagas/?currentJobId=3363525535&originalSubdomain=br</a>
                             </th>
                         </tr>
                         <tr>
